--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Haitham Khedr personal website">
+  <meta name="description" content="Personal website and blog">
   <meta name="keywords" content="Haitham Khedr,PhD,umd">
   <meta name="author" content="Haitham Khedr">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Haitham Khedr</title>
 </head>
 <body>
 
