--- a/index.html
+++ b/index.html
@@ -1,16 +1,140 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="description" content="Personal website and blog">
-  <meta name="keywords" content="Haitham Khedr,PhD,umd">
-  <meta name="author" content="Haitham Khedr">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Haitham Khedr</title>
+  <link href="./hkhedr_files/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="./hkhedr_files/style.css" rel="stylesheet">
+
+
 </head>
+
 <body>
 
-<p>Haitham's personal website... Under Construction</p>
+<div id="header">
+  <div class="placeholder" data-large="./hkhedr_files/UMD_aerial_fullres_blur.png">
+    <img src="./hkhedr_files/nthu_small.png" class="img-small loaded">
+    <div style="padding-bottom: 35.5%;"></div>
+  </div>
+  <!--
+  <div id="topnav">
+    <ul>
+      <li><a href="http://yclin.me/blog/">blog</a></li>
+    </ul>
+  </div>
+  -->
+  <div id="headerblob">
+    <img src="./hkhedr_files/Formal_pp.jpg" class="img-circle imgme">
+    <div id="headertext">
+      <div id="htname">Haitham Khedr</div>
+      <div id="htdesc">AI software engineer at Com-Iot</div>
+      <div id="htem">haithamkhedr@gmail.com</div>
+      <div id="icons">
+        <div class="svgico">
+          <a href="https://twitter.com/HaithamKhedr"><img src="./hkhedr_files/03-twitter.svg" width="48px"></a>
+        </div>
+        <div class="svgico">
+          <a href="https://www.linkedin.com/in/hkhedr"><img src="./hkhedr_files/linkedin.svg" width="44px"></a>
+        </div>
+        <div class="svgico">
+          <a href="https://github.com/haithamkhedr"><img src="./hkhedr_files/octocat.svg" width="48px"></a>
+        </div>
+        <!-- <div class="svgico">
+          <a href="http://yclin.me/blog/"><img src="./hkhedr_files/blog.svg" width="48px"></a>
+        </div> -->
+        <!-- <div class="svgico">
+          <a href="https://drive.google.com/file/d/0B50cbskLVq-eOWFKQ0NqNTRNQVE/view"><img src="./hkhedr_files/CV.svg" width="150px"></a>
+        </div> -->
+      </div>
+    </div>
+  </div>
+</div>
 
-</body>
-</html>
+
+
+
+  <!-- <div class="container">
+
+    <div class="row">
+
+      <div class="col-md-3">
+        <div class="pp">
+          <img class="noborder" src="./hkhedr_files/uber_logo.png" height="150">
+          <div style="font-size:18px; font-weight:300;">Research Intern</div>
+          <div style="font-size:18px; font-weight:300;">Uber ATG</div>
+          <div style="font-size:18px; font-weight:300;">Oct 17 - Present</div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="pp">
+          <img class="noborder" src="./hkhedr_files/scikit-learn.png" height="150">
+          <div style="font-size:18px; font-weight:300;">Contract Developer</div>
+          <div style="font-size:18px; font-weight:300;">Google Summer of Code</div>
+          <div style="font-size:18px; font-weight:300;">May 16 - Aug 16</div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="pp">
+          <img class="noborder" src="./hkhedr_files/vt_logo.png" height="150">
+          <div style="font-size:18px; font-weight:300;">Research Intern</div>
+          <div style="font-size:18px; font-weight:300;">Virginia Tech</div>
+          <div style="font-size:18px; font-weight:300;">May 17 - Aug 17</div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="pp">
+          <img class="noborder" src="./hkhedr_files/nthu_logo.png" border="0" height="150">
+          <div style="font-size:18px; font-weight:300;">B.Sc. in Computer Science</div>
+          <div style="font-size:18px; font-weight:300;">National Tsing Hua University</div>
+          <div style="font-size:18px; font-weight:300;">Sep 12 - Jun 16</div>
+        </div>
+      </div>
+
+    </div>
+ -->
+<div class="container" style="font-size:18px; font-weight:300;margin-top:0px;margin-bottom:50px;">
+  <b>Bio</b>. I am PhD student in Electrical and Computer Engineering at UMD advised by Prof. <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics. 
+
+  <br><br>
+  See my <a href="https://drive.google.com/file/d/0B50cbskLVq-eOWFKQ0NqNTRNQVE/view">CV</a> for more details.
+
+</div>
+
+<hr class="soft">
+
+<!-- Projects -->
+<div class="container">
+  <h2>Projects</h2>
+  <div class="row">
+    <h4>Under construction</h4>
+  </div>
+
+</div>
+
+<hr class="soft">
+
+<div class="container">
+  <h2>Work Experiences</h2>
+  <div class="row">
+    <h4>Under construction</h4>    
+  </div>
+</div>
+
+<!-- place js at end for faster loading -->
+<script src="./hkhedr_files/bootstrap.min.js"></script>
+<script src="./hkhedr_files/load_image.js"></script>
+
+<script>
+</script>
+
+
+
+<div id="point-jawn" style="z-index: 2147483647;"></div>
+</div></div></div></div></body></html>
