--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <b>Bio</b>. I am PhD student in Electrical and Computer Engineering at UMD advised by Prof. <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics. 
 
   <br><br>
-  See my <a href="https://drive.google.com/file/d/0B50cbskLVq-eOWFKQ0NqNTRNQVE/view">CV</a> for more details.
+  See my <a href="">CV</a> for more details.
 
 </div>
 
