--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
  -->
 <div class="container" style="font-size:18px; font-weight:300;margin-top:0px;margin-bottom:50px;">
-  <b>Bio</b>. I am PhD student in Electrical and Computer Engineering at UMD advised by Prof. <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics. 
+  <b>Bio</b>. I am newly admitted PhD student in Electrical and Computer Engineering at UMD advised by Prof. <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics. 
 
   <br><br>
   See my <a href="">CV</a> for more details.
