remove extra arrow

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="svgico">
           <a href="https://github.com/haithamkhedr"><img src="./hkhedr_files/octocat.svg" width="48px"></a>
         </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
