--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <b>Bio</b>. I am newly admitted PhD student in Electrical and Computer Engineering at UMD advised by Prof. <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics. 
 
   <br><br>
-  See my <a href="">CV</a> for more details.
+  See my <a href="">CV</a> for more details. <i>(last updated Jan 2018)</i>
 
 </div>
 
