Add compressed img

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div id="header">
-  <div class="placeholder" data-large="./hkhedr_files/UMD_aerial_fullres_blur_compressed.png">
+  <div class="placeholder" data-large="./hkhedr_files/UMD_aerial.jpg">
     <img src="./hkhedr_files/nthu_small.png" class="img-small loaded">
     <div style="padding-bottom: 35.5%;"></div>
   </div>
