--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
 <div id="header">
-  <div class="placeholder" data-large="./hkhedr_files/UMD_aerial.jpg">
-    <img src="./hkhedr_files/nthu_small.png" class="img-small loaded">
+  <div class="placeholder bg1 img-large" >
     <div style="padding-bottom: 35.5%;"></div>
   </div>
+
   <div id="headerblob">
     <img src="./hkhedr_files/Formal_pp.jpg" class="img-circle imgme">
     <div id="headertext">
@@ -72,7 +72,6 @@
 
 <!-- place js at end for faster loading -->
 <script src="./hkhedr_files/bootstrap.min.js"></script>
-<script src="./hkhedr_files/load_image.js"></script>
 
 <script>
 </script>
