remove blur in BG

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div id="header">
-  <div class="placeholder bg1 img-blur2" >
+  <div class="placeholder bg1" >
     <div style="padding-bottom: 35.5%;"></div>
   </div>
 
