adding work experience

--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
   </div>
 </div>
 
+<div class="container">
+  <!-- <h2>Work Experiences</h2> -->
+  <div class="row">
+
+    <div class="col-sm-4">
+      <div class="pp">
+        <img class="noborder" src="./hkhedr_files/com-iot_logo.jpg" height="100">
+        <div style="font-size:18px; font-weight:300;">AI Engineer</div>
+        <div style="font-size:18px; font-weight:300;">com-iot</div>
+        <div style="font-size:18px; font-weight:300;">Jan 17 - Present</div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="pp">
+        <img class="noborder" src="./hkhedr_files/avelabs_logo.jpg" height="100">
+        <div style="font-size:18px; font-weight:300;">Software Engineer</div>
+        <div style="font-size:18px; font-weight:300;">Avelabs</div>
+        <div style="font-size:18px; font-weight:300;">Sep 16 - Dec 17</div>
+      </div>
+    </div>
+
+    <div class="col-sm-4">
+      <div class="pp">
+        <img class="noborder" src="./hkhedr_files/mentor_logo.jpg" height="100">
+        <div style="font-size:18px; font-weight:300;">Software Intern</div>
+        <div style="font-size:18px; font-weight:300;">Mentor Graphics</div>
+        <div style="font-size:18px; font-weight:300;">Feb 16 - Aug 16</div>
+      </div>
+    </div>
+
+
+  </div>
+</div>
 <div align="justify" class="container" style="font-size:18px; font-weight:300;margin-top:0px;margin-bottom:50px;">
   <b>Bio</b>. I am newly admitted PhD student in Electrical and Computer Engineering at UMD advised by Prof. <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics. 
 
@@ -63,12 +97,7 @@
 
 <hr class="soft">
 
-<div class="container">
-  <h2>Work Experiences</h2>
-  <div class="row">
-    <h4>Under construction</h4>    
-  </div>
-</div>
+
 
 <!-- place js at end for faster loading -->
 <script src="./hkhedr_files/bootstrap.min.js"></script>
