--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <img class="noborder" src="./hkhedr_files/com-iot_logo.jpg" height="100">
         <div style="font-size:18px; font-weight:300;">AI Engineer</div>
         <div style="font-size:18px; font-weight:300;">com-iot</div>
-        <div style="font-size:18px; font-weight:300;">Jan 17 - Present</div>
+        <div style="font-size:18px; font-weight:300;">Jan '17 - Present</div>
       </div>
     </div>
 
@@ -71,7 +71,7 @@
         <img class="noborder" src="./hkhedr_files/avelabs_logo.jpg" height="100">
         <div style="font-size:18px; font-weight:300;">Software Engineer</div>
         <div style="font-size:18px; font-weight:300;">Avelabs</div>
-        <div style="font-size:18px; font-weight:300;">Sep 16 - Dec 17</div>
+        <div style="font-size:18px; font-weight:300;">Sep '16 - Dec '17</div>
       </div>
     </div>
 
@@ -80,7 +80,7 @@
         <img class="noborder" src="./hkhedr_files/mentor_logo.jpg" height="100">
         <div style="font-size:18px; font-weight:300;">Software Intern</div>
         <div style="font-size:18px; font-weight:300;">Mentor Graphics</div>
-        <div style="font-size:18px; font-weight:300;">Feb 16 - Aug 16</div>
+        <div style="font-size:18px; font-weight:300;">Feb '16 - Aug '16</div>
       </div>
     </div>
 
