Changing email address

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="headertext">
       <div id="htname">Haitham Khedr</div>
       <div id="htdesc">AI software engineer at Com-Iot</div>
-      <div id="htem">haithamkhedr@gmail.com</div>
+      <div id="htem">hkhedr_at_umd.edu</div>
       <div id="icons">
         <div class="svgico">
           <a href="https://twitter.com/HaithamKhedr"><img src="./hkhedr_files/03-twitter.svg" width="48px"></a>
