--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
 </div>
 <div align="justify" class="container" style="font-size:18px; font-weight:300;margin-top:0px;margin-bottom:50px;">
-  <b>Bio</b>. I am newly admitted PhD student in Electrical and Computer Engineering at UMD advised by Prof. <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics. 
+  <b>Bio</b>. I am newly admitted PhD student in Electrical and Computer Engineering at UMD advised by Professor <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics, more specifically in designing learning algorithms that lead to autonomous systems that are guaranteed to be safe, reliable and secure when deployed in the real world.
 
   <br><br>
   See my <a href="pdfs/Hkhedr_CV_UMD.pdf">CV</a> for more details. <i>(last updated Jan 2018)</i>
