Adding UMD coloumn

--- a/index.html
+++ b/index.html
@@ -57,16 +57,25 @@
   <!-- <h2>Work Experiences</h2> -->
   <div class="row">
 
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="pp">
-        <img class="noborder" src="./hkhedr_files/com-iot_logo.jpg" height="100">
+        <img class="noborder" src="./hkhedr_files/umd_logo.jpg" height="100">
+        <div style="font-size:18px; font-weight:300;">PhD Student</div>
+        <div style="font-size:18px; font-weight:300;">ECE@UMD</div>
+        <div style="font-size:18px; font-weight:300;">Aug '18 - Present</div>
+      </div>
+    </div>
+
+    <div class="col-sm-3">
+      <div class="pp">
+        <img class="noborder" src="./hkhedr_files/com-iot_logo.png" height="100">
         <div style="font-size:18px; font-weight:300;">AI Engineer</div>
         <div style="font-size:18px; font-weight:300;">com-iot</div>
         <div style="font-size:18px; font-weight:300;">Jan '17 - Present</div>
       </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="pp">
         <img class="noborder" src="./hkhedr_files/avelabs_logo.jpg" height="100">
         <div style="font-size:18px; font-weight:300;">Software Engineer</div>
@@ -75,7 +84,7 @@
       </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="pp">
         <img class="noborder" src="./hkhedr_files/mentor_logo.jpg" height="100">
         <div style="font-size:18px; font-weight:300;">Software Intern</div>
