--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="col-sm-3">
       <div class="pp">
         <img class="noborder" src="./hkhedr_files/umd_logo.jpg" height="100">
-        <div style="font-size:18px; font-weight:300;">PhD Student</div>
-        <div style="font-size:18px; font-weight:300;">ECE@UMD</div>
+        <div style="font-size:18px; font-weight:300;">PhD in ECE</div>
+        <div style="font-size:18px; font-weight:300;">UMD</div>
         <div style="font-size:18px; font-weight:300;">Aug '18 - Present</div>
       </div>
     </div>
@@ -71,7 +71,7 @@
         <img class="noborder" src="./hkhedr_files/com-iot_logo.png" height="100">
         <div style="font-size:18px; font-weight:300;">AI Engineer</div>
         <div style="font-size:18px; font-weight:300;">com-iot</div>
-        <div style="font-size:18px; font-weight:300;">Jan '17 - Present</div>
+        <div style="font-size:18px; font-weight:300;">Jan '18 - Aug '18</div>
       </div>
     </div>
 
@@ -97,7 +97,7 @@
   </div>
 </div>
 <div align="justify" class="container" style="font-size:18px; font-weight:300;margin-top:0px;margin-bottom:50px;">
-  <b>Bio</b>. I am newly admitted PhD student in Electrical and Computer Engineering at UMD advised by Professor <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics, more specifically in designing learning algorithms that lead to autonomous systems that are guaranteed to be safe, reliable and secure when deployed in the real world.
+  <b>Bio</b>. I am a PhD student in Electrical and Computer Engineering at UMD advised by Professor <a href="http://www.ece.umd.edu/~yshoukry/">Yasser Shoukry</a>. I graduated in Computer and Systems Engineering from Ain Shams University, Egypt in 2016. My research interests lie at the intersection of Machine learning and Robotics, more specifically in designing learning algorithms that lead to autonomous systems that are guaranteed to be safe, reliable and secure when deployed in the real world.
 
   <br><br>
   See my <a href="pdfs/Hkhedr_CV_UMD.pdf">CV</a> for more details. <i>(last updated Jan 2018)</i>
