--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <img src="./hkhedr_files/Formal_pp.jpg" class="img-circle imgme">
     <div id="headertext">
       <div id="htname">Haitham Khedr</div>
-      <div id="htdesc">AI software engineer at Com-Iot</div>
+      <div id="htdesc">PhD student at UMD</div>
       <div id="htem">hkhedr_at_umd.edu</div>
       <div id="icons">
         <div class="svgico">
