--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -609,7 +609,7 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication/bernn/" >BERN-NN: Tight Bound Propagation For Neural Networks Using Bernstein Polynomial Interval Arithmetic</a>
+      <a href="/publication/bernn/" >BERN-NN: Tight Bound Propagation For Neural Networks Using Bernstein Polynomial Interval Arithmetic (HSCC 23&#39;)</a>
     </div>
 
     
